# -Stereoscopic-Point-Cloud-Generation-Using-Array-of-Commodity-Cameras

./: .gitignore  README.md
BlockMatchingParams/: stereo_bm_params.json
CalibrationParams/: stereo_params_1080_1-2_opencv.xml  stereo_params_1080_2-5_opencv.xml  stereo_params_1080_3-1_opencv.xml  stereo_params_1080_3-2_opencv.xml  stereo_params_1080_4-3_opencv.xml  stereo_params_1080_5-6_opencv.xml
MPCGUACC-0.0.2/InstallationScripts/: install_controller.sh  install_octave.sh  install_opencv.sh  install_pcl1.7  install_wiring_pi.sh
MPCGUACC-0.0.2/InstallationScripts/opencv-2.4.13/: install_opencv_2.4.13.sh
MPCGUACC-0.0.2/RaspberryPi/CameraModule/src/: gpio_utils.py  io_utils.py  (+7 more)
MPCGUACC-0.0.2/RaspberryPi/ControllerModule/: CMakeLists.txt  controller.cpp  main.cpp  test_camera.cpp
MPCGUACC-0.0.2/RaspberryPi/ControllerModule/GPIOWrapper/include/: gpio_wrapper.h
MPCGUACC-0.0.2/RaspberryPi/ControllerModule/GPIOWrapper/src/: gpio_wrapper.cpp
MPCGUACC-0.0.2/StereoBlockMatchingTuning/SBMT-0.0.1/: StereoBlockMatchingTuning.pro  StereoBlockMatchingTuning.pro.user.3439eef  StereoBlockMatchingTuning.pro.user.88d24ed
MPCGUACC-0.0.2/StereoCameraCalibrator/: list_generator.py
MPCGUACC-0.0.2/StereoCameraCalibrator/MATLAB/: stereo_camera_calibration.m  stereo_camera_calibration_parameters_matlab.m  stereo_camera_calibration_parameters_opencv.m  stereo_camera_calibration_parameters_opencv.prj  stereo_camera_checkerboard_detection.m  stereo_camera_parameters_export.m
MPCGUACC-0.0.2/StereoPointCloudGenerator/SPCG-0.0.1/: CMakeLists.txt  StereoPointCloudGenerator.pro
(+40 files in other folders)
